[gd_scene load_steps=8 format=4 uid="uid://hxm1cqxubtgd"]

[ext_resource type="Script" path="res://scripts/scenarios/scenario.gd" id="1_cnu44"]
[ext_resource type="Texture2D" uid="uid://darpchbm58dfn" path="res://assets/2d/backgrounds/background.png" id="2_vfj3p"]
[ext_resource type="PackedScene" uid="uid://dcdv81ypv3f80" path="res://scenes/tilemaps/background.tscn" id="4_pogba"]
[ext_resource type="PackedScene" uid="uid://dnmdgcoy6l126" path="res://scenes/tilemaps/tiles.tscn" id="5_1nljr"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_5cuxb"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_hrg1m"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_fdhj1"]
vertices = PackedVector2Array(702, 382, -62, 382, -62, -22, 702, -22)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-72, -32, 712, -32, 712, 392, -72, 392)])
source_geometry_group_name = &"navigation_polygon_source_group"

[node name="Scenario" type="Node2D"]
script = ExtResource("1_cnu44")

[node name="WorldLimits" type="Node" parent="."]

[node name="WorldLimitLeft" type="StaticBody2D" parent="WorldLimits"]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldLimits/WorldLimitLeft"]
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_5cuxb")

[node name="WorldLimitRight" type="StaticBody2D" parent="WorldLimits"]
position = Vector2(640, 0)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldLimits/WorldLimitRight"]
rotation = -1.5708
shape = SubResource("WorldBoundaryShape2D_hrg1m")

[node name="CameraLimitLeft" type="Marker2D" parent="WorldLimits"]

[node name="CameraLimitRight" type="Marker2D" parent="WorldLimits"]
position = Vector2(640, 0)

[node name="CameraLimitTop" type="Marker2D" parent="WorldLimits"]

[node name="CameraLimitBottom" type="Marker2D" parent="WorldLimits"]
position = Vector2(0, 360)

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -28.0
offset_right = 704.0
offset_bottom = 388.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_vfj3p")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="TileMap" type="Node" parent="."]

[node name="Background" parent="TileMap" instance=ExtResource("4_pogba")]
position = Vector2(0, 72)
tile_map_data = PackedByteArray("AAACAAAAAAAAAAAAAAA=")

[node name="Tiles" parent="TileMap" instance=ExtResource("5_1nljr")]
tile_map_data = PackedByteArray("AAD//wgAAAACAAAAAAD//wkAAAACAAEAAAD//woAAAACAAIAAAD+/wgAAAACAAAAAAD+/wkAAAACAAEAAAD+/woAAAACAAIAAAD+/wsAAAACAAMAAAD//wsAAAACAAMAAAAAAAgAAAACAAAAAAAAAAkAAAACAAEAAAAAAAoAAAACAAIAAAAAAAsAAAACAAMAAAABAAgAAAACAAAAAAABAAkAAAACAAEAAAABAAoAAAACAAIAAAABAAsAAAACAAMAAAACAAgAAAACAAAAAAACAAkAAAACAAEAAAACAAoAAAACAAIAAAACAAsAAAACAAMAAAADAAgAAAACAAAAAAADAAkAAAACAAEAAAADAAoAAAACAAIAAAADAAsAAAACAAMAAAAEAAgAAAACAAAAAAAEAAkAAAACAAEAAAAEAAoAAAACAAIAAAAEAAsAAAACAAMAAAAFAAgAAAACAAAAAAAFAAkAAAACAAEAAAAFAAoAAAACAAIAAAAFAAsAAAACAAMAAAAGAAgAAAACAAAAAAAGAAkAAAACAAEAAAAGAAoAAAACAAIAAAAGAAsAAAACAAMAAAAHAAgAAAACAAAAAAAHAAkAAAACAAEAAAAHAAoAAAACAAIAAAAHAAsAAAACAAMAAAAIAAgAAAACAAAAAAAIAAkAAAACAAEAAAAIAAoAAAACAAIAAAAIAAsAAAACAAMAAAAJAAgAAAACAAAAAAAJAAkAAAACAAEAAAAJAAoAAAACAAIAAAAJAAsAAAACAAMAAAAKAAgAAAACAAAAAAAKAAkAAAACAAEAAAAKAAoAAAACAAIAAAAKAAsAAAACAAMAAAALAAgAAAACAAAAAAALAAkAAAACAAEAAAALAAoAAAACAAIAAAALAAsAAAACAAMAAAAMAAgAAAACAAAAAAAMAAkAAAACAAEAAAAMAAoAAAACAAIAAAAMAAsAAAACAAMAAAANAAgAAAACAAAAAAANAAkAAAACAAEAAAANAAoAAAACAAIAAAANAAsAAAACAAMAAAAOAAgAAAACAAAAAAAOAAkAAAACAAEAAAAOAAoAAAACAAIAAAAOAAsAAAACAAMAAAAPAAgAAAACAAAAAAAPAAkAAAACAAEAAAAPAAoAAAACAAIAAAAPAAsAAAACAAMAAAAQAAgAAAACAAAAAAAQAAkAAAACAAEAAAAQAAoAAAACAAIAAAAQAAsAAAACAAMAAAARAAgAAAACAAAAAAARAAkAAAACAAEAAAARAAoAAAACAAIAAAARAAsAAAACAAMAAAASAAgAAAACAAAAAAASAAkAAAACAAEAAAASAAoAAAACAAIAAAASAAsAAAACAAMAAAATAAgAAAACAAAAAAATAAkAAAACAAEAAAATAAoAAAACAAIAAAATAAsAAAACAAMAAAAUAAgAAAACAAAAAAAUAAkAAAACAAEAAAAUAAoAAAACAAIAAAAUAAsAAAACAAMAAAAVAAgAAAACAAAAAAAVAAkAAAACAAEAAAAVAAoAAAACAAIAAAAVAAsAAAACAAMAAAA=")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_fdhj1")

[node name="Spwan" type="Node" parent="."]

[node name="SetupEnemies" type="Timer" parent="Spwan"]
one_shot = true
autostart = true

[node name="PlayerSpwan" type="Marker2D" parent="Spwan"]
position = Vector2(48, 240)

[node name="BatSpwan" type="Marker2D" parent="Spwan"]
position = Vector2(355, 131)

[connection signal="timeout" from="Spwan/SetupEnemies" to="." method="_on_setup_timer_timeout"]
